# SET10110_PathTracing_001Prototype

./: CMakeLists.txt  README.md
PathTracerPrototype/: CMakeLists.txt  main.cpp
common/: camera.h  colour.h  common.h  hittable.h  hittableList.h  material.h  ray.h  sphere.h  vec3.h
